@@ -1,9 +1,9 @@
 
-# $Id: Makefile.PL,v 2.8 2007/06/10 01:07:00 Daddy Exp $
+# $Id: Makefile.PL,v 2.9 2007/06/11 22:13:26 Daddy Exp $
 
 use inc::Module::Install;
 name('WWW-Search-Jobs');
-version(2.025);
+version(2.026);
 author('Martin Thurn <mthurn@cpan.org>');
 abstract('Query job-related web search engines');
 license('perl');
