@@ -1,3 +1,7 @@
+2007-06-11    <Daddy@C-3PO>
+
+	* module HeadHunter delete (website no longer exists)
+
 2007-06-09    <Daddy@C-3PO>
 
 	* module AltaVista::Careers deleted (already exists in WWW-Search-AltaVista distro)
